--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="flex justify-center mb-16">
             <img
               src="assets/image/PFP.jpg"
-              class="rounded-full gscale w-72 h-72"
+              class="rounded-full w-72 h-72"
               alt="Image"
             />
           </div>
@@ -305,9 +305,7 @@
           </h1>
 
           <p class="font-normal text-gray-400 text-md md:text-lg mb-20">
-            I’m not currently taking on new client work but feel free to contact
-            me for any <br />
-            other inquiries.
+            Contact me so we can work out the details of your next project.
           </p>
 
           <div class="flex items-center justify-center space-x-8">
