Update to resume. and experience / work.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
             lafiraed04@gmail.com
           </p>
 
-          <p onclick="window.open('https://wa.me/21656620075')" class="mb-8 cursor-pointer text-sm md:text-base text-gray-600">
-            
+          <p
+            onclick="window.open('https://wa.me/21656620075')"
+            class="mb-8 cursor-pointer text-sm md:text-base text-gray-600"
+          >
             +216 56 620 075
           </p>
 
@@ -158,7 +160,7 @@
             </div>
 
             <div
-              onclick="window.open('http://goldenbrand.vercel.app')"
+              onclick="window.open('http://goldenbrandqa.com')"
               class="flex space-x-6 cursor-pointer ani"
             >
               <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">02</h1>
@@ -176,6 +178,28 @@
                   commitment to durability, precision, and modern design, we
                   provide customized solutions for both residential and
                   commercial spaces.
+                </p>
+              </div>
+            </div>
+
+            <div
+              onclick="window.open('http://al-arabiya.vercel.app')"
+              class="flex space-x-6 cursor-pointer ani"
+            >
+              <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">03</h1>
+
+              <span class="w-28 h-1 bg-gray-300 mt-5"></span>
+
+              <div>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">
+                  Al Arabiya 
+                </h1>
+
+                <p class="font-normal text-gray-500 text-sm md:text-base">
+                  Al-Arabiya is a leading e-commerce platform offering
+                  high-quality skincare, makeup, and fragrances. With a seamless
+                  shopping experience and a commitment to luxury and quality,
+                  it’s the go-to destination for premium cosmetics.
                 </p>
               </div>
             </div>
@@ -251,6 +275,11 @@
             </h6>
 
             <p class="font-semibold text-gray-600 text-base">
+              Tunis
+              <span class="font-normal text-gray-300">/ Freelance</span>
+            </p>
+
+            <p class="font-semibold text-gray-600 text-base">
               ISIMED
               <span class="font-normal text-gray-300">/ Hackathon</span>
             </p>
@@ -280,12 +309,17 @@
             <p class="font-normal text-gray-400 text-base">
               Front-End Developer
             </p>
+
+            <p class="font-normal text-gray-400 text-base">
+              Front-End Developer
+            </p>
           </div>
 
           <div class="space-y-8 md:space-y-16">
             <h6 class="font-medium text-gray-400 text-base uppercase">
               Timeline
             </h6>
+            <p class="font-normal text-gray-400 text-base">2025 - January</p>
 
             <p class="font-normal text-gray-400 text-base">2024 - November</p>
 
